--- a/overlay/packages/apps/Settings/res/values-ru/pa_strings.xml
+++ b/overlay/packages/apps/Settings/res/values-ru/pa_strings.xml
@@ -34,7 +34,7 @@
 
     <!-- Status bar - Battery -->
     <string name="battery_style_title">Battery status style</string>
-    <string name="battery_style_icon">Icon</string>
+    <string name="battery_style_icon">Вертикальная</string>
     <string name="battery_style_circle">Circle</string>
     <string name="battery_style_text">Text</string>
     <string name="battery_style_hidden">Hidden</string>
@@ -50,15 +50,15 @@
 
     <!-- Night Display -->
     <string name="night_display_warning">Please note that Night Light may increase battery consumption.</string>
-    <string name="night_display_hide">Do not show this warning</string>
-    <string name="night_display_ok">Ok</string>
+    <string name="night_display_hide">Не показывать это предупреждение</string>
+    <string name="night_display_ok">Ок</string>
 
     <!-- Statusbar - double-tap to sleep -->
-    <string name="double_tap_to_sleep_title">Double-tap to Sleep</string>
-    <string name="double_tap_to_sleep_summary">Tap twice on the status bar to put the device to sleep</string>
+    <string name="double_tap_to_sleep_title">Выключать экран при двойном нажатии</string>
+    <string name="double_tap_to_sleep_summary">Дважды коснитесь строки состояния, чтобы перевести устройство в спящий режим</string>
 
     <!-- Gestures Settings -->
-    <string name="gestures_settings_title">Gestures</string>
+    <string name="gestures_settings_title">Жесты</string>
     <string name="gestures_settings_summary">Customize off-screen and system gestures</string>
     <string name="offscreen_gestures_title">Offscreen gestures</string>
     <string name="system_gestures_title">System gestures</string>
@@ -89,35 +89,35 @@
     <string name="gestures_open_dialer">Open dialer</string>
 
     <!-- Buttons -->
-    <string name="buttons_pref_title">Buttons</string>
+    <string name="buttons_pref_title">Кнопки</string>
     <string name="buttons_pref_summary">Customize your device keys and buttons</string>
-    <string name="enable_navigation_bar_title">Enable software keys</string>
-    <string name="enable_navigation_bar_summary">Enable on-screen navigation keys</string>
+    <string name="enable_navigation_bar_title">Навигационный бар</string>
+    <string name="enable_navigation_bar_summary">Включить наэкранные кнопки</string>
     <string name="swap_navigation_keys_title">Swap keys</string>
     <string name="swap_navigation_keys_summary">Swap back and recents keys</string>
     <string name="swap_slider_order_title">Swap slider</string>
     <string name="swap_slider_order_summary">Swap the alert slider modes order</string>
     <string name="hardware_brightness_keys_title">Backlight</string>
     <string name="hardware_brightness_keys_summary">Enable navigation keys backlight</string>
-    <string name="home_key_title">Home button</string>
-    <string name="back_key_title">Back button</string>
-    <string name="menu_key_title">Menu button</string>
+    <string name="home_key_title">Домой</string>
+    <string name="back_key_title">Назад</string>
+    <string name="menu_key_title">Меню</string>
     <string name="assist_key_title">Assist button</string>
     <string name="app_switch_key_title">Recents button</string>
     <string name="camera_key_title">Camera button</string>
     <string name="short_press_title">Short press action</string>
     <string name="long_press_title">Long press action</string>
     <string name="double_tap_title">Double tap action</string>
-    <string name="action_nothing">No action</string>
-    <string name="action_menu">Open/close menu</string>
-    <string name="action_app_switch">Recents</string>
-    <string name="action_search">Search assistant</string>
+    <string name="action_nothing">Нет действия</string>
+    <string name="action_menu">Открыть/закрыть меню</string>
+    <string name="action_app_switch">Недавние</string>
+    <string name="action_search">Поисковой помощник</string>
     <string name="action_voice_search">Voice search</string>
     <string name="action_in_app_search">In-app search</string>
-    <string name="action_launch_camera">Open camera</string>
-    <string name="action_last_app">Launch last app</string>
-    <string name="action_splitscreen">Splitscreen</string>
-    <string name="action_screen_off">Turn off screen</string>
+    <string name="action_launch_camera">Открыть приложение камеры</string>
+    <string name="action_last_app">Запустить последнее приложение</string>
+    <string name="action_splitscreen">Разделение экрана</string>
+    <string name="action_screen_off">Выключить экран</string>
 
     <!-- Screenshot shutter sound -->
     <string name="screenshot_shutter_sound_title">Screenshot shutter sound</string>
@@ -172,7 +172,6 @@
     <string name="notification_light_default_value">Default</string>
     <string name="notification_light_missed_call_title">Missed call</string>
     <string name="notification_light_voicemail_title">Voicemail</string>
-    <string name="notification_light_brightness" translatable="false">@string/brightness</string>
     <string name="notification_light_screen_on">Lights with screen on</string>
     <string name="notification_light_zen_mode">Lights in do not disturb mode</string>
     <string name="notification_light_use_multiple_leds">Multiple LEDs</string>
@@ -181,14 +180,8 @@
     <!-- Lights settings, LED notification -->
     <string name="led_notification_text">LED light has been enabled</string>
     <string name="notification_light_no_apps_summary">To add per app control, activate \'%1$s\' and press \'\u002b\' on the menu bar</string>
-    <string name="font_sample_text">11:57</string>
 
     <!-- Format string for fingerprint location message -->
     <string name="security_settings_fingerprint_enroll_find_sensor_message_cm">Locate the fingerprint sensor on the <xliff:g id="sensor_location">%1$s</xliff:g> of your phone.</string>
 
-    <!-- Fingerprint sensor locations -->
-    <string name="security_settings_fingerprint_sensor_location_back">back</string>
-    <string name="security_settings_fingerprint_sensor_location_front">front</string>
-    <string name="security_settings_fingerprint_sensor_location_left">left side</string>
-    <string name="security_settings_fingerprint_sensor_location_right">right side</string>
 </resources>
