--- a/overlay/packages/apps/Settings/res/values-ru/pa_strings.xml
+++ b/overlay/packages/apps/Settings/res/values-ru/pa_strings.xml
@@ -33,17 +33,17 @@
     <string name="volbtn_music_controls_summary">When the screen is off, long pressing the volume keys will seek music tracks</string>
 
     <!-- Status bar - Battery -->
-    <string name="battery_style_title">Battery status style</string>
-    <string name="battery_style_icon">Вертикальная</string>
-    <string name="battery_style_circle">Circle</string>
-    <string name="battery_style_text">Text</string>
-    <string name="battery_style_hidden">Hidden</string>
+    <string name="battery_style_title">Индикатор батареи</string>
+    <string name="battery_style_icon">Вертикальный значок</string>
+    <string name="battery_style_circle">Круг</string>
+    <string name="battery_style_text">Текст</string>
+    <string name="battery_style_hidden">Не показывать</string>
 
     <!-- Status bar - Battery percentage -->
-    <string name="battery_percentage_title">Battery percentage</string>
-    <string name="battery_percentage_default">Hidden (default)</string>
-    <string name="battery_percentage_text_inside">Inside the icon</string>
-    <string name="battery_percentage_text_next">Next to the icon</string>
+    <string name="battery_percentage_title">Процент заряда батареи</string>
+    <string name="battery_percentage_default">Не показывать (по умолчанию)</string>
+    <string name="battery_percentage_text_inside">Внутри значка</string>
+    <string name="battery_percentage_text_next">Рядом со значком</string>
 
     <!-- sRGB -->
     <string name="srgb_summary">Enable sRGB display calibration</string>
@@ -61,109 +61,85 @@
     <string name="gestures_settings_title">Жесты</string>
     <string name="gestures_settings_summary">Customize off-screen and system gestures</string>
     <string name="offscreen_gestures_title">Offscreen gestures</string>
-    <string name="system_gestures_title">System gestures</string>
+    <string name="system_gestures_title">Cистемные жесты</string>
     <string name="keywords_gestures">screen touchscreen draw swipe finger</string>
-
-    <string name="gestures_double_tap">Double-tap</string>
-    <string name="gestures_draw_v">Draw V</string>
-    <string name="gestures_draw_inverse_v">Draw Inverse V</string>
-    <string name="gestures_draw_o">Draw O</string>
-    <string name="gestures_draw_m">Draw M</string>
-    <string name="gestures_draw_w">Draw W</string>
-    <string name="gestures_draw_arrow_left">Draw &lt;</string>
-    <string name="gestures_draw_arrow_right">Draw &gt;</string>
-    <string name="gestures_one_finger_swipe_up">One-finger swipe up</string>
-    <string name="gestures_one_finger_swipe_right">One-finger swipe right</string>
-    <string name="gestures_one_finger_swipe_down">One-finger swipe down</string>
-    <string name="gestures_one_finger_swipe_left">One-finger swipe left</string>
-    <string name="gestures_two_finger_swipe">Two-finger swipe</string>
-
-    <string name="gestures_disabled">Disabled</string>
-    <string name="gestures_wake_device">Wake device</string>
-    <string name="gestures_toggle_flashlight">Toggle flashlight</string>
-    <string name="gestures_toggle_airplane_mode">Toggle airplane mode</string>
-    <string name="gestures_play_pause_music">Play/Pause music</string>
-    <string name="gestures_next_music">Next music</string>
-    <string name="gestures_previous_music">Previous music</string>
-    <string name="gestures_open_camera">Open camera</string>
-    <string name="gestures_open_dialer">Open dialer</string>
 
     <!-- Buttons -->
     <string name="buttons_pref_title">Кнопки</string>
     <string name="buttons_pref_summary">Customize your device keys and buttons</string>
-    <string name="enable_navigation_bar_title">Навигационный бар</string>
-    <string name="enable_navigation_bar_summary">Включить наэкранные кнопки</string>
+    <string name="enable_navigation_bar_title">Включение экранной панели навигации</string>
+    <string name="enable_navigation_bar_summary">Включить экраную панель навигации и отключить аппаратные кнопки</string>
     <string name="swap_navigation_keys_title">Swap keys</string>
     <string name="swap_navigation_keys_summary">Swap back and recents keys</string>
     <string name="swap_slider_order_title">Swap slider</string>
     <string name="swap_slider_order_summary">Swap the alert slider modes order</string>
-    <string name="hardware_brightness_keys_title">Backlight</string>
-    <string name="hardware_brightness_keys_summary">Enable navigation keys backlight</string>
-    <string name="home_key_title">Домой</string>
-    <string name="back_key_title">Назад</string>
-    <string name="menu_key_title">Меню</string>
-    <string name="assist_key_title">Assist button</string>
-    <string name="app_switch_key_title">Recents button</string>
-    <string name="camera_key_title">Camera button</string>
-    <string name="short_press_title">Short press action</string>
-    <string name="long_press_title">Long press action</string>
-    <string name="double_tap_title">Double tap action</string>
+    <string name="hardware_brightness_keys_title">Подсветка</string>
+    <string name="hardware_brightness_keys_summary">Подсветка кнопок</string>
+    <string name="home_key_title">Кнопка «Домой»</string>
+    <string name="back_key_title">Кнопка «Назад»</string>
+    <string name="menu_key_title">Кнопка «Меню»</string>
+    <string name="assist_key_title">Кнопка «Поиск»</string>
+    <string name="app_switch_key_title">Кнопка «Обзор»</string>
+    <string name="camera_key_title">Кнопка «Камера»</string>
+    <string name="short_press_title">Короткое нажатие</string>
+    <string name="long_press_title">Долгое нажатие</string>
+    <string name="double_tap_title">Двойное нажатие</string>
     <string name="action_nothing">Нет действия</string>
     <string name="action_menu">Открыть/закрыть меню</string>
-    <string name="action_app_switch">Недавние</string>
-    <string name="action_search">Поисковой помощник</string>
-    <string name="action_voice_search">Voice search</string>
-    <string name="action_in_app_search">In-app search</string>
-    <string name="action_launch_camera">Открыть приложение камеры</string>
-    <string name="action_last_app">Запустить последнее приложение</string>
+    <string name="action_app_switch">Недавние приложения</string>
+    <string name="action_search">Поисковый помощник</string>
+    <string name="action_voice_search">Голосовой поиск</string>
+    <string name="action_in_app_search">Поиск в приложении</string>
+    <string name="action_launch_camera">Включить камеру</string>
+    <string name="action_last_app">Предыдущее приложение</string>
     <string name="action_splitscreen">Разделение экрана</string>
     <string name="action_screen_off">Выключить экран</string>
 
     <!-- Screenshot shutter sound -->
-    <string name="screenshot_shutter_sound_title">Screenshot shutter sound</string>
+    <string name="screenshot_shutter_sound_title">Звук скриншота</string>
 
     <!-- Heads-up notifications -->
-    <string name="heads_up_notifications_title">Peeking notifications</string>
+    <string name="heads_up_notifications_title">Всплывающие уведомления</string>
 
     <!-- LED notifications -->
-    <string name="battery_light_settings">Battery charging light</string>
-    <string name="leds">LED light</string>
-    <string name="notification_light_settings">Notification light</string>
-    <string name="reset">Reset</string>
+    <string name="battery_light_settings">Батарея</string>
+    <string name="leds">Настройки LED-индикации</string>
+    <string name="notification_light_settings">Уведомления</string>
+    <string name="reset">Сбросить</string>
     <string name="batterylight_title">Battery LED settings</string>
     <string name="battery_light_enable">Enable</string>
-    <string name="battery_low_pulse_title">Pulse if battery low</string>
-    <string name="battery_light_list_title">Colors</string>
-    <string name="battery_light_low_color_title">Battery low</string>
-    <string name="battery_light_medium_color_title">Charging</string>
-    <string name="battery_light_full_color_title">Charged (90%)</string>
-    <string name="battery_light_really_full_color_title">Charged (100%)</string>
-    <string name="profile_choose_app">Choose app</string>
+    <string name="battery_low_pulse_title">Мигать при низком уровне заряда</string>
+    <string name="battery_light_list_title">Цвета</string>
+    <string name="battery_light_low_color_title">Батарея разряжена</string>
+    <string name="battery_light_medium_color_title">Заряжается</string>
+    <string name="battery_light_full_color_title">Почти заряжена (90%)</string>
+    <string name="battery_light_really_full_color_title">Заряжена (100%)</string>
+    <string name="profile_choose_app">Выберите приложение</string>
     <string name="edit_battery_settings">Edit battery settings</string>
-    <string name="led_color_green">Green</string>
-    <string name="led_color_red">Red</string>
-    <string name="led_color_blue">Blue</string>
-    <string name="advanced">Advanced</string>
-    <string name="profiles_add">Add...</string>
+    <string name="led_color_green">Зеленый</string>
+    <string name="led_color_red">Красный</string>
+    <string name="led_color_blue">Синий</string>
+    <string name="advanced">Другой</string>
+    <string name="profiles_add">Добавить...</string>
 
     <!-- Notification light dialogs -->
-    <string name="default_time">Normal</string>
-    <string name="custom_time">Custom</string>
-    <string name="dialog_delete_title">Delete</string>
-    <string name="dialog_delete_message">Remove selected item?</string>
+    <string name="default_time">Обычный</string>
+    <string name="custom_time">Пользовательские настр.</string>
+    <string name="dialog_delete_title">Удалить</string>
+    <string name="dialog_delete_message">Удалить выбранный элемент?</string>
 
     <!-- Values for the notification light pulse spinners -->
-    <string name="pulse_length_always_on">Always on</string>
-    <string name="pulse_length_very_short">Very short</string>
-    <string name="pulse_length_short">Short</string>
-    <string name="pulse_length_normal">Normal</string>
-    <string name="pulse_length_long">Long</string>
-    <string name="pulse_length_very_long">Very long</string>
-    <string name="pulse_speed_very_fast">Very fast</string>
-    <string name="pulse_speed_fast">Fast</string>
-    <string name="pulse_speed_normal">Normal</string>
-    <string name="pulse_speed_slow">Slow</string>
-    <string name="pulse_speed_very_slow">Very slow</string>
+    <string name="pulse_length_always_on">Всегда вкл</string>
+    <string name="pulse_length_very_short">Очень коротко</string>
+    <string name="pulse_length_short">Коротко</string>
+    <string name="pulse_length_normal">Обычный</string>
+    <string name="pulse_length_long">Долго</string>
+    <string name="pulse_length_very_long">Очень долго</string>
+    <string name="pulse_speed_very_fast">Очень быстро</string>
+    <string name="pulse_speed_fast">Быстро</string>
+    <string name="pulse_speed_normal">Обычный</string>
+    <string name="pulse_speed_slow">Медленно</string>
+    <string name="pulse_speed_very_slow">Очень медленно</string>
 
     <!-- Lights settings screen, notification light settings -->
     <string name="notification_light_applist_title">Apps</string>
@@ -180,8 +156,5 @@
     <!-- Lights settings, LED notification -->
     <string name="led_notification_text">LED light has been enabled</string>
     <string name="notification_light_no_apps_summary">To add per app control, activate \'%1$s\' and press \'\u002b\' on the menu bar</string>
-
-    <!-- Format string for fingerprint location message -->
-    <string name="security_settings_fingerprint_enroll_find_sensor_message_cm">Locate the fingerprint sensor on the <xliff:g id="sensor_location">%1$s</xliff:g> of your phone.</string>
 
 </resources>
