--- a/overlay/packages/apps/Settings/res/values-ru/pa_strings.xml
+++ b/overlay/packages/apps/Settings/res/values-ru/pa_strings.xml
@@ -45,11 +45,8 @@
     <string name="battery_percentage_text_inside">Внутри значка</string>
     <string name="battery_percentage_text_next">Рядом со значком</string>
 
-    <!-- sRGB -->
-    <string name="srgb_summary">Enable sRGB display calibration</string>
-
     <!-- Night Display -->
-    <string name="night_display_warning">Обратите внимание, что Night Light может увеличить потребление батареи.</string>
+    <string name="night_display_warning">Обратите внимание, что «Ночной режим» может увеличить потребление батареи.</string>
     <string name="night_display_hide">Не показывать это предупреждение</string>
     <string name="night_display_ok">Ок</string>
 
@@ -67,8 +64,8 @@
     <string name="buttons_pref_summary">Настроить кнопки и навигационный бар</string>
     <string name="enable_navigation_bar_title">Включение экранной панели навигации</string>
     <string name="enable_navigation_bar_summary">Включить экраную панель навигации и отключить аппаратные кнопки</string>
-    <string name="swap_navigation_keys_title">Swap keys</string>
-    <string name="swap_navigation_keys_summary">Swap back and recents keys</string>
+    <string name="swap_navigation_keys_title">Поменять местами</string>
+    <string name="swap_navigation_keys_summary">Поменять местами кнопки «Назад» и «Недавние» в навигационном баре</string>
     <string name="swap_slider_order_title">Swap slider</string>
     <string name="swap_slider_order_summary">Swap the alert slider modes order</string>
     <string name="hardware_brightness_keys_title">Подсветка</string>
@@ -77,7 +74,7 @@
     <string name="back_key_title">Кнопка «Назад»</string>
     <string name="menu_key_title">Кнопка «Меню»</string>
     <string name="assist_key_title">Кнопка «Поиск»</string>
-    <string name="app_switch_key_title">Кнопка «Обзор»</string>
+    <string name="app_switch_key_title">Кнопка «Недавние»</string>
     <string name="camera_key_title">Кнопка «Камера»</string>
     <string name="short_press_title">Короткое нажатие</string>
     <string name="long_press_title">Долгое нажатие</string>
