--- a/overlay/frameworks/base/packages/SystemUI/res/values-ru/pa_strings.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values-ru/pa_strings.xml
@@ -24,10 +24,10 @@
     <string name="on_the_spot_confirm">ХОРОШО</string>
 
     <!-- OnTheSpot: Quick Settings quick pull-down feature description message. [CHAR LIMIT=NONE] -->
-    <string name="quick_settings_quick_pull_down">Would you like the right side of the status bar to quickly pull down the Quick Settings panel?</string>
+    <string name="quick_settings_quick_pull_down">Хотели бы Вы жестом от правой стороны строки состояния раскрывать панель быстрых настроек?</string>
     <!-- OnTheSpot: Title of the Quick Settings quick pull-down feature for the reset dialog. [CHAR LIMIT=NONE] -->
-    <string name="quick_settings_quick_pull_down_name">Quick Settings quick pull-down</string>
-    <string name="quick_settings_quick_pull_down_summary">Automatically expand Quick Settings when pulling from the side of the screen</string>
+    <string name="quick_settings_quick_pull_down_name">Раскрытие быстрых настроек</string>
+    <string name="quick_settings_quick_pull_down_summary">Автоматически раскрывать панель быстрых настроек жестом от правой стороны строки состояния</string>
 
     <!-- Content description of the immersive mode tile -->
     <string name="accessibility_quick_settings_immersive_mode_off">Immersive mode off</string>
@@ -55,7 +55,7 @@
     <string name="quick_settings_immersive_introduce_hide_status">Hides only the navigation bar, leaving the status bar in its original position.</string>
 
     <!-- QuickSettings: Night Display -->
-    <string name="quick_settings_night_display_warning">Обратите внимание, что Night Light может увеличить потребление батареи.</string>
+    <string name="quick_settings_night_display_warning">Обратите внимание, что «Ночной режим» может увеличить потребление батареи.</string>
     <string name="quick_settings_night_display_hide">Не показывать это предупреждение</string>
 
     <!-- Content description of the location tile in quick settings when on, battery saving mode (not shown on the screen). [CHAR LIMIT=NONE] -->
@@ -79,24 +79,24 @@
     <string name="quick_settings_location_detail_title">Location</string>
     <!-- QuickSettings: Location detail panel menu title [CHAR LIMIT=NONE] -->
 
-    <string name="quick_settings_location_detail_menu_title">Select mode:</string>
+    <string name="quick_settings_location_detail_menu_title">Выберите режим:</string>
     <!-- [CHAR LIMIT=30] Location detail panel, high accuracy location mode -->
-    <string name="quick_settings_location_detail_mode_high_accuracy_title">High accuracy</string>
+    <string name="quick_settings_location_detail_mode_high_accuracy_title">Высокая точность</string>
     <!-- [CHAR LIMIT=30] Location detail panel, battery saving location mode -->
-    <string name="quick_settings_location_detail_mode_battery_saving_title">Battery saving</string>
+    <string name="quick_settings_location_detail_mode_battery_saving_title">Экономия заряда</string>
     <!-- [CHAR LIMIT=30] Location detail panel, device only location mode -->
-    <string name="quick_settings_location_detail_mode_sensors_only_title">Device only</string>
+    <string name="quick_settings_location_detail_mode_sensors_only_title">Только GPS</string>
     <!-- [CHAR LIMIT=130] Location detail panel, description for high accuracy mode -->
-    <string name="quick_settings_location_detail_mode_high_accuracy_description">Use GPS, Wi\u2011Fi, Bluetooth, or cellular networks to determine location </string>
+    <string name="quick_settings_location_detail_mode_high_accuracy_description">Использовать GPS, Wi\u2011Fi, Bluetooth, или мобильные данные для определения местоположения</string>
     <!-- [CHAR LIMIT=130] Location detail panel, description for battery saving mode -->
-    <string name="quick_settings_location_detail_mode_battery_saving_description">Use Wi\u2011Fi, Bluetooth, or cellular networks to determine location</string>
+    <string name="quick_settings_location_detail_mode_battery_saving_description">Использовать Wi\u2011Fi, Bluetooth, или мобильные данные для определения местоположения</string>
     <!-- [CHAR LIMIT=130] Location detail panel, description for sensors only mode -->
-    <string name="quick_settings_location_detail_mode_sensors_only_description">Use GPS to determine your location</string>
+    <string name="quick_settings_location_detail_mode_sensors_only_description">Использовать GPS для определения Вашего местоположения</string>
 
     <!-- QuickSettings: Alert slider tile related strings (re-using some of the do not disturb ones) [CHAR LIMIT=NONE] -->
     <string name="quick_settings_alert_slider_unavailable">Alert slider tile not available</string>
     <string name="quick_settings_alert_slider_detail_alarms_only_description">This blocks ALL sounds and vibrations except those from alarms and media playback.</string>
-    <string name="quick_settings_alert_slider_none_label">All notifications</string>
+    <string name="quick_settings_alert_slider_none_label">Все уведомления</string>
     <string name="quick_settings_alert_slider_detail_disabled_message_description">Additional settings are not available when do not disturb is off.</string>
 
     <string name="zen_footer_alert_slider_priority_only_summary">Specified notifications only</string>
