--- a/overlay/frameworks/base/packages/SystemUI/res/values-ru/pa_strings.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values-ru/pa_strings.xml
@@ -21,7 +21,7 @@
     <!-- OnTheSpot: Action denial button text. [CHAR LIMIT=NONE] -->
     <string name="on_the_spot_deny">НЕТ, СПАСИБО</string>
     <!-- OnTheSpot: Action confirmation button text. [CHAR LIMIT=NONE] -->
-    <string name="on_the_spot_confirm">ХОРОШО</string>
+    <string name="on_the_spot_confirm">ДА</string>
 
     <!-- OnTheSpot: Quick Settings quick pull-down feature description message. [CHAR LIMIT=NONE] -->
     <string name="quick_settings_quick_pull_down">Хотели бы Вы жестом от правой стороны строки состояния раскрывать панель быстрых настроек?</string>
@@ -30,29 +30,29 @@
     <string name="quick_settings_quick_pull_down_summary">Автоматически раскрывать панель быстрых настроек жестом от правой стороны строки состояния</string>
 
     <!-- Content description of the immersive mode tile -->
-    <string name="accessibility_quick_settings_immersive_mode_off">Immersive mode off</string>
-    <string name="accessibility_quick_settings_immersive_mode_full">Immersive mode fullscreen</string>
-    <string name="accessibility_quick_settings_immersive_mode_hide_status_bar">Immersive mode hide status bar</string>
-    <string name="accessibility_quick_settings_immersive_mode_hide_nav_bar">Immersive mode hide navigation bar</string>
+    <string name="accessibility_quick_settings_immersive_mode_off">Полноэкранный режим выкл.</string>
+    <string name="accessibility_quick_settings_immersive_mode_full">Полное погружение</string>
+    <string name="accessibility_quick_settings_immersive_mode_hide_status_bar">Скрытие строки состояния</string>
+    <string name="accessibility_quick_settings_immersive_mode_hide_nav_bar">Скрытие навигационного бара</string>
 
     <!-- Announcement made when immersive mode is toggled on/off -->
-    <string name="accessibility_quick_settings_immersive_mode_changed_on">Immersive mode turned on</string>
-    <string name="accessibility_quick_settings_immersive_mode_changed_off">Immersive mode turned off</string>
+    <string name="accessibility_quick_settings_immersive_mode_changed_on">Полноэкранный режим включен</string>
+    <string name="accessibility_quick_settings_immersive_mode_changed_off">Полноэкранный режим выключен</string>
 
     <!-- QuickSettings: Immersive tile -->
-    <string name="quick_settings_immersive_mode_label">Immersive mode</string>
-    <string name="quick_settings_immersive_mode_label_hide_all">Fully immersive</string>
-    <string name="quick_settings_immersive_mode_label_hide_all_twoline">Fully\nimmersive</string>
-    <string name="quick_settings_immersive_mode_label_hide_status">Только панель навигации</string>
-    <string name="quick_settings_immersive_mode_label_hide_status_twoline">Только\nпанель навигации</string>
-    <string name="quick_settings_immersive_mode_label_hide_nav">Только строка состояния</string>
-    <string name="quick_settings_immersive_mode_label_hide_nav_twoline">Только\nстрока состояния</string>
-    <string name="quick_settings_immersive_mode_detail_hide_all">Fully immersive experience</string>
+    <string name="quick_settings_immersive_mode_label">Полноэкранный режим</string>
+    <string name="quick_settings_immersive_mode_label_hide_all">Полное погружение</string>
+    <string name="quick_settings_immersive_mode_label_hide_all_twoline">Полное\nпогружение</string>
+    <string name="quick_settings_immersive_mode_label_hide_status">Панель навигации</string>
+    <string name="quick_settings_immersive_mode_label_hide_status_twoline">Панель\nнавигации</string>
+    <string name="quick_settings_immersive_mode_label_hide_nav">Строка состояния</string>
+    <string name="quick_settings_immersive_mode_label_hide_nav_twoline">Строка\nсостояния</string>
+    <string name="quick_settings_immersive_mode_detail_hide_all">Полное погружение</string>
     <string name="quick_settings_immersive_mode_detail_hide_status">Только панель навигации</string>
     <string name="quick_settings_immersive_mode_detail_hide_nav">Только строка состояния</string>
-    <string name="quick_settings_immersive_introduce_hide_all">Hides both the navigation and status bars for a fully immersive experience.</string>
-    <string name="quick_settings_immersive_introduce_hide_nav">Hides only the status bar, leaving the navigation bar in its original position.</string>
-    <string name="quick_settings_immersive_introduce_hide_status">Hides only the navigation bar, leaving the status bar in its original position.</string>
+    <string name="quick_settings_immersive_introduce_hide_all">Скрыть панели навигации и строки состояния для полного погружения.</string>
+    <string name="quick_settings_immersive_introduce_hide_nav">Скрыть только строку состояния.</string>
+    <string name="quick_settings_immersive_introduce_hide_status">Скрыть только навигационный бар.</string>
 
     <!-- QuickSettings: Night Display -->
     <string name="quick_settings_night_display_warning">Обратите внимание, что «Ночной режим» может увеличить потребление батареи.</string>
